GP-6 Реализация добавления погодных условий + тесты
